--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     </footer>
 
 
-    <script src="theme.js"></script>
+    <script src="https://rawcdn.githack.com/gaaldren/gaadren.github.io/a737bedbe3fe4d36f8bda80bbfc4706628ec6afb/theme.js"></script>
 </body>
 
 </html>
