--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 <body class="body">
     <header class="header">
-        <a class="header_logo logo" href="#">Сайт Бармина Никиты<a href="#" class="black_theme"><i class='bx bx-sun'></i></a></a>
+        <a class="header_logo logo" href="#">Сайт Бармина Никиты<a href="#" class="black_theme" onclick = get_mail()><i class='bx bx-sun'></i></a></a>
     </header>
 
     <div class="hero">
